Fix mobile spacing

--- a/Netflix Pakistan - by Zaky_files/style.css
+++ b/Netflix Pakistan - by Zaky_files/style.css
@@ -87,6 +87,13 @@ nav button {
     text-align: center;
 }
 
+.hero form {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
 .hero> :nth-child(1) {
     font-style: normal;
     font-weight: 900;
@@ -268,11 +275,13 @@ nav button {
 }
 
 .faq h2 {
-    margin-left: 262px;
     margin-top: 80px;
-    padding: 10px;
+    margin-bottom: 0;
+    padding: 10px 0;
     font-weight: 500;
     font-size: 24px;
+    text-align: center;
+    width: 100%;
 }
 
 .faqbox {
@@ -414,6 +423,19 @@ nav button {
 
     .hero>:nth-child(3) {
         font-size: 12px;
+    }
+
+    .hero form {
+        flex-direction: column;
+    }
+
+    .hero form input {
+        margin-bottom: 10px;
+    }
+
+    .hero form button {
+        width: 100%;
+        margin-top: 10px;
     }
 
     .card {
